# smarc_auvs

captain_interface/: CMakeLists.txt
captain_interface/include/captain_interface/: scientistmsg.h
captain_interface/include/captain_interface/RosInterFace/: RosInterFace.h
captain_interface/launch/: interface.launch  nmea_tcp_driver.launch  nmea_udp_driver.launch
captain_interface/scripts/: control_test.py  nmea_tcp_reader.py  nmea_udp_reader.py  usbl_input.py  usbl_output.py
captain_interface/src/RosInterFace/: RosInterFace.cpp  RosInterFace_captain_callbacks.cpp  RosInterFace_ros_callbacks.cpp
lolo_controllers/: CMakeLists.txt  package.xml
lolo_controllers/launch/: control.launch  pid_test.launch
lolo_controllers/scripts/: mixer.py  pid.py  pid_test.py
lolo_description/urdf/: lolo_auv.urdf.xacro
lolo_drivers/launch/: lolo_core_hardware1.launch  lolo_core_hardware2.launch  lolo_core_tf.launch
lolo_drivers/scripts/: altitude_estimation.py  dvl_to_altitude.py  ins_to_dr.py  lolo_bringup.sh  lolo_simulation_bringup.sh  pressureTestScript.py  rbr_ctd.py  serial_reader.py  usbl_interface.py
lolo_msgs/: CMakeLists.txt
lolo_msgs/msg/: CustomAcousticCommand.msg  CustomCommand.msg  Pressures.msg  RBR_ctd.msg  Status.msg  Temperatures.msg  UsblTopsideCorrection.msg  VescFeedback.msg  VolzServo.msg
lolo_ping_driver/: CMakeLists.txt  README.md  configparserTest.py  package.xml
lolo_ping_driver/cfg/: ping_schedules.ini
lolo_ping_driver/launch/: config_server.launch
lolo_ping_driver/msg/: pingSchedule.msg
lolo_ping_driver/scripts/: server.py  testclient.py
lolo_ping_driver/srv/: pingScheduleService.srv
