<?xml version="1.0"?>
<package format="2">
  <name>lolo_controllers</name>
  <version>0.0.18</version>
  <description>The lolo_controllers package</description>

  <maintainer email="niklas@todo.todo">nbore</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>smarc_msgs</build_depend>
  <build_export_depend>smarc_msgs</build_export_depend>
  <exec_depend>smarc_msgs</exec_depend>
  <depend>std_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
